k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test-shakil.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-loadbalancer
                port:
                  number: 5200
